[gd_scene load_steps=44 format=3 uid="uid://ckny0oraaoget"]

[ext_resource type="Script" uid="uid://fdmb3ox1x0lb" path="res://scripts/player.gd" id="1_fjrip"]
[ext_resource type="Texture2D" uid="uid://icm0q2oekba5" path="res://assets/player/serang.png" id="2_tuyoq"]
[ext_resource type="Texture2D" uid="uid://dln0afgv3y315" path="res://assets/player/mati.png" id="3_fjrip"]
[ext_resource type="Texture2D" uid="uid://b2b0g0wanepk3" path="res://assets/player/diam.png" id="4_smehm"]
[ext_resource type="Texture2D" uid="uid://uu2vcpagit82" path="res://assets/player/lompat.png" id="5_ur7pv"]
[ext_resource type="Texture2D" uid="uid://cc2d7xfj2vl4y" path="res://assets/player/kanan-maju.png" id="6_y4r1p"]
[ext_resource type="AudioStream" uid="uid://6lkccjw0m7y2" path="res://assets/music/sfx/Jump.wav" id="7_d2wvv"]
[ext_resource type="AudioStream" uid="uid://b6krw82fb8brc" path="res://assets/music/sfx/Kill.wav" id="8_3v2ag"]
[ext_resource type="AudioStream" uid="uid://ci4admokpxrq2" path="res://assets/music/sfx/Die.wav" id="9_jej6c"]
[ext_resource type="AudioStream" uid="uid://bnwlqu77g7otx" path="res://assets/music/sfx/Step.wav" id="10_f1ej7"]
[ext_resource type="AudioStream" uid="uid://bdw8pvb3yuqsy" path="res://assets/music/sfx/afterDie.wav" id="11_oprun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("2_tuyoq")
region = Rect2(0, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("2_tuyoq")
region = Rect2(279, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_tuyoq")
region = Rect2(558, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_tuyoq")
region = Rect2(837, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("2_tuyoq")
region = Rect2(1116, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("2_tuyoq")
region = Rect2(1395, 0, 279, 230)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("3_fjrip")
region = Rect2(0, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("3_fjrip")
region = Rect2(279, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("3_fjrip")
region = Rect2(558, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("3_fjrip")
region = Rect2(837, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("3_fjrip")
region = Rect2(1116, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("3_fjrip")
region = Rect2(1395, 0, 279, 238)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("4_smehm")
region = Rect2(0, 0, 279, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("4_smehm")
region = Rect2(279, 0, 279, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("4_smehm")
region = Rect2(558, 0, 279, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("4_smehm")
region = Rect2(837, 0, 279, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("4_smehm")
region = Rect2(1116, 0, 279, 245)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("5_ur7pv")
region = Rect2(0, 0, 279, 242)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("5_ur7pv")
region = Rect2(279, 0, 279, 242)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("5_ur7pv")
region = Rect2(558, 0, 279, 242)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("5_ur7pv")
region = Rect2(837, 0, 279, 242)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("5_ur7pv")
region = Rect2(1116, 0, 279, 242)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("6_y4r1p")
region = Rect2(0, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("6_y4r1p")
region = Rect2(279, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("6_y4r1p")
region = Rect2(558, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("6_y4r1p")
region = Rect2(837, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("6_y4r1p")
region = Rect2(1116, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("6_y4r1p")
region = Rect2(1395, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("6_y4r1p")
region = Rect2(1674, 0, 279, 236)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("6_y4r1p")
region = Rect2(1953, 0, 279, 236)

[sub_resource type="SpriteFrames" id="SpriteFrames_ieltc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 70.0
height = 193.33334

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
scale = Vector2(0.09, 0.09)
script = ExtResource("1_fjrip")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ieltc")
animation = &"idle"
autoplay = "idle"
speed_scale = 1.5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-13.333333, 26.666666)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
position_smoothing_enabled = true

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(66.666664, 0)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d2wvv")

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3v2ag")

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jej6c")

[node name="StepSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_f1ej7")
volume_db = -5.0

[node name="AfterDieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_oprun")
